# CricAI

./: .gitignore  CHANGELOG  CHANGELOG.md  ChangeLog  LICENSE  README.md  Requirements.txt  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  check-changelog.yml  ci.yml  deploy.yaml  deploy.yml
Dataset/: finalDataset.csv  finalDataset_Categorial.csv  finalDataset_Continous.csv  finalDataset_labelled.csv
Dataset Preprocessing Scripts/1 Data Import/: Records1972.csv  Records1973.csv  Records1975.csv  Records1976.csv  Records1977.csv  Records1978.csv  Records1979.csv  Records1980.csv  Records1983.csv  Records1985.csv  Records1986.csv  Records1987.csv  Records1988.csv  Records1989.csv  Records1991.csv  Records1992.csv  Records1993.csv  Records1994.csv  Records1998.csv  Records1999.csv  Records2016.csv  Records2017.csv
Dataset Preprocessing Scripts/2 Data Furnishing/: Records1972.csv  Records1976.csv  Records1982.csv  Records1987.csv  Records1992.csv  Records1994.csv  Records1997.csv  Records2001.csv  Records2004.csv  Records2007.csv  Records2011.csv
Dataset Preprocessing Scripts/3 Data Concatenate/: Dataset.csv  Records1973.csv  Records1975.csv  Records1979.csv  Records1981.csv  Records1984.csv  Records1988.csv  (+4 more)
Desktop-App/: requirements.txt
Notebooks-dev/: DecisionTreeClassifier.ipynb  Neural_Network_Perceptron.ipynb  README.md
Web-App/: .gitignore  Classifier.py  Pickle_DTClf.pkl  Pickle_MLPClf.pkl  README.md  dataInputFormat.py  datasetLabelled.py  datasetRead.py  index.py  modelPickler.py  requirements.txt
(+174 files in other folders)
